feat: typescripts 支持

--- a/tools/ice-scripts/package.json
+++ b/tools/ice-scripts/package.json
@@ -24,6 +24,7 @@
     "address": "^1.0.3",
     "async": "^2.0.1",
     "autoprefixer": "^7.1.6",
+    "awesome-typescript-loader": "^4.0.1",
     "babel-core": "^6.26.0",
     "babel-loader": "^7.1.2",
     "babel-plugin-import": "^1.6.3",
