--- a/vue-materials/blocks/UserLogin/package.json
+++ b/vue-materials/blocks/UserLogin/package.json
@@ -1,21 +1,15 @@
 {
   "name": "@vue-materials/user-login-block",
   "version": "1.0.0",
-  "description": "基于element-ui组件的用户登录模板",
+  "description": "基于element-ui组件的用户登录界面",
   "author": "smallwei <1634566606@qq.com>",
-  "files": [
-    "src/",
-    "lib/"
-  ],
+  "files": ["src/", "lib/"],
   "repository": {
     "type": "git",
     "url": "https://github.com/alibaba/ice"
   },
   "license": "MIT",
-  "keywords": [
-    "ice",
-    "ice-block"
-  ],
+  "keywords": ["ice", "ice-block"],
   "publishConfig": {
     "access": "public",
     "registry": "http://registry.npmjs.com"
@@ -27,10 +21,9 @@
   },
   "blockConfig": {
     "name": "user-login",
-    "title": "UserLogin",
-    "categorie": [
-      "其他"
-    ],
-    "snapshot": "https://img.alicdn.com/tfs/TB1WlGbXMmTBuNjy1XbXXaMrVXa-2868-1602.png"
+    "title": "登录页",
+    "categories": ["登录页"],
+    "screenshot":
+      "https://img.alicdn.com/tfs/TB1WlGbXMmTBuNjy1XbXXaMrVXa-2868-1602.png"
   }
 }
